--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,4 +12,5 @@
 platform = atmelavr
 board = uno
 framework = arduino
-
+monitor_speed = 115200
+lib_deps = adafruit/Adafruit BluefruitLE nRF51@^1.10.0
